# template-workflow-classify-extract-sec

./: .gitignore  .gitignore.jinja  AGENTS.md  AGENTS.modified.md  README.md  copier.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/: mcp.json
.github/: templates-remotes.yml
.github/workflows/: ci-check.yml  ci.yml  export-template-metrics.yml  mirror.yml
meta-templates/agents-mcp/: .mcp.json  AGENTS.md
meta-templates/agents-mcp-ui/ui/: AGENTS.md
meta-templates/agents-mcp/.claude/: settings.json
meta-templates/agents-mcp/.cursor/: mcp.json
rendered/: .gitignore
rendered/basic/: .copier-answers.yml  .gitignore  README.md  pyproject.toml
rendered/basic-ui/: .copier-answers.yml  pyproject.toml
rendered/basic-ui/src/app/: workflow.py
rendered/basic-ui/ui/src/pages/: Home.tsx
rendered/basic/src/basic/: workflow.py
rendered/data-extraction/: .copier-answers.yml  README.md
rendered/document-qa/: .copier-answers.yml  pyproject.toml
rendered/document-qa/ui/: package.json
rendered/showcase/: .copier-answers.yml
scripts/: ensure-repos.py
src/extraction_review/: clients.py  config.py  metadata_workflow.py  process_file.py
src/tmpl/: README.md  __init__.py  cli.py
src/tmpl/checks/: __init__.py  javascript.py  python.py  workflows.py
src/tmpl/config/: __init__.py  mapping.py  settings.py
src/tmpl/git/: __init__.py  changes.py  operations.py  subtree.py  tagging.py  versioning.py
src/tmpl/init/: scripts.py
src/tmpl/mcp/: mcp.py  search.py
src/tmpl/metrics/: exporter.py
src/tmpl/sync/: __init__.py  comparator.py  differ.py  resolver.py
src/tmpl/templates/: __init__.py  copier_integration.py  jinja_utils.py  manager.py  validation.py
src/tmpl/utils/: __init__.py  console.py  filesystem.py  subprocess_utils.py
template-gen-specs/classify-extract-sec/: config.json  expectations.md  task.md
templates/: .gitignore
templates/basic/: .gitignore  pyproject.toml
templates/basic-ui/: .gitignore  pyproject.toml
templates/basic-ui/src/app/: workflow.py
templates/basic-ui/ui/src/: App.tsx  index.css
templates/basic-ui/ui/src/pages/: Home.tsx
templates/classify-extract-sec/: README.md
templates/classify-extract-sec/ui/src/pages/: ItemPage.tsx
tests/: test_search.py  test_tag_versions_cmd.py  test_version_cmd.py
tests/basic/: README.md  pyproject.toml
ui/src/lib/: useMetadata.ts
ui/src/pages/: ItemPage.tsx
