[project]
name = "tmpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Adrian Lyjak", email = "adrianlyjak@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "copier>=9.10.2",
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "tomlkit>=0.13.3",
    "requests>=2.32.3",
    "posthog>=3.7.4",
    "packaging>=24.1",
    "fastmcp>=2.12.5",
]

[project.scripts]
tmpl = "tmpl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]


[tool.hatch.build.targets.wheel]
packages = ["src/tmpl"]

[tool.hatch.build.targets.wheel.force-include]
".github/templates-remotes.yml" = "tmpl/.github/templates-remotes.yml"

[tool.hatch.envs.default.scripts]
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check --fix ."
lint-check = ["ruff check ."]
typecheck = "ty check src"
test = "pytest"
all-check = ["format-check", "lint-check", "test", "typecheck"]
all-fix = ["format", "lint", "test", "typecheck"]
tmpl-all-fix = [
    "tmpl all check-javascript --fix",
    "tmpl all check-python --fix",
    "tmpl all check-workflows",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
